<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/editText_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:ems="10"
        android:hint="@string/username_hint" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/button_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/editText_register"
        android:onClick="onClickRegisterButton"
        android:text="@string/register_button" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editText_register" >

        <RadioButton
            android:id="@+id/radio_singleplayer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickSingleplayerRadio"
            android:text="@string/singleplayer" />

        <RadioButton
            android:id="@+id/radio_multiplayer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickMultiplayerRadio"
            android:text="@string/multiplayer" />

    </RadioGroup>

    <Spinner
        android:id="@+id/spinner_modi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/radioGroup" />

    <EditText
        android:id="@+id/editText_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner_modi"
        android:layout_toLeftOf="@+id/button_register"
        android:ems="10"
        android:hint="@string/registerfirst_hint" />

    <Button
        android:id="@+id/button_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editText_search"
        android:layout_alignBottom="@+id/editText_search"
        android:layout_alignLeft="@+id/button_register"
        android:layout_alignParentRight="true"
        android:onClick="onClickSearchButton"
        android:text="@string/search_button" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_search"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" />

</RelativeLayout>
